<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="rate_us_btn">Rate Now</string>
    <string name="rate_us_rating_good">We like you too!</string>
    <string name="rate_us_rating_bad">Oh, no!</string>

    <string name="rate_us_rating_default_descr">We are working hard for a better user experience. We’d greatly appreciate if you can rate us.</string>
    <string name="rate_us_rating_good_descr">Thanks for your feedback.</string>
    <string name="rate_us_rating_bad_descr">Please, leave us some feedback.</string>

    <string name="rate_us_arrow_txt">The best we can get :)</string>

    <string name="rate_us_thanks">Thank you for feedback!</string>

</resources>
