<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/_10sdp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_360sdp"
    android:background="@drawable/rateus_shape_dialog">

    <ImageView
        android:id="@+id/img_emoji"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/emoji_ok"/>

    <RelativeLayout
        android:layout_below="@id/img_emoji"
        android:layout_above="@id/container_ratebar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/container_text"
            android:visibility="gone"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_rateus_title"
                android:text="@string/rate_us_rating_good"
                android:textSize="25sp"
                android:textColor="#242424"
                android:gravity="center"
                android:fontFamily="@font/gilroy_semibold"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txt_rateus_description"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/rate_us_rating_good_descr"
                android:textSize="18sp"
                android:textColor="#242424"
                android:gravity="center"
                android:fontFamily="@font/gilroy_semibold"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView
            android:id="@+id/txt_rateus_text"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/gilroy_semibold"
            android:gravity="center"
            android:text="@string/rate_us_rating_default_descr"
            android:textColor="#242424"
            android:textSize="18sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/container_ratebar"
        android:layout_above="@id/container_arrow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <per.wsj.library.AndRatingBar
            android:id="@+id/rate_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginVertical="@dimen/_7sdp"
            android:numStars="5"
            android:rating="4.0"
            android:stepSize="1.0"
            app:bgDrawable="@drawable/star_off"
            app:starDrawable="@drawable/star_on"
            app:starSpacing="@dimen/_12sdp" />

        <ImageView
            android:layout_marginStart="-15dp"
            android:layout_toEndOf="@id/rate_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/star_lines"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/container_arrow"
        android:layout_above="@id/btn_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_rateus_best"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:fontFamily="@font/gilroy_medium"
            android:text="@string/rate_us_arrow_txt"
            android:textColor="#FF6B00"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_toEndOf="@id/txt_rateus_best"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_arrow"
            android:rotation="90"
            android:scaleX="-1"
            app:tint="#FF6B00" />

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_rate"
        android:fontFamily="@font/gilroy_bold"
        android:gravity="center"
        android:textSize="22sp"
        android:textColor="#ffffff"
        android:text="@string/rate_us_btn"
        android:textAllCaps="true"
        android:layout_marginVertical="@dimen/_20sdp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rateus_shape_btn"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_50sdp"/>

</RelativeLayout>